[gd_scene load_steps=8 format=1]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://media/temp_art/menu/MainMenuBackground.png" type="Texture" id=2]
[ext_resource path="res://media/temp_art/menu/SwitchSwitch.png" type="Texture" id=3]
[ext_resource path="res://media/temp_art/menu/SwitchForeground.png" type="Texture" id=4]
[ext_resource path="res://media/fonts/raleway-regular-30.fnt" type="BitmapFont" id=5]
[ext_resource path="res://media/temp_art/character/Character001.png" type="Texture" id=6]
[ext_resource path="res://media/temp_art/truck001/Truck001.png" type="Texture" id=7]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Players" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Player01" type="Control" parent="Players"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 537.0
margin/top = 246.0
margin/right = 577.0
margin/bottom = 286.0

[node name="SwitchSwitch" type="Sprite" parent="Players/Player01"]

transform/pos = Vector2( 11.4002, 29.108 )
transform/rot = -45.0
texture = ExtResource( 3 )
offset = Vector2( 25.9261, 0.368473 )

[node name="TextureFrame" type="TextureFrame" parent="Players/Player01"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 45.0
margin/bottom = 58.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Label" type="Label" parent="Players/Player01"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -400.0
margin/top = 2.0
margin/right = -349.0
margin/bottom = 16.0
text = "Player 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player02" type="Control" parent="Players"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 537.0
margin/top = 450.0
margin/right = 577.0
margin/bottom = 490.0

[node name="SwitchSwitch" type="Sprite" parent="Players/Player02"]

transform/pos = Vector2( 11.4002, 29.108 )
transform/rot = -45.0
texture = ExtResource( 3 )
offset = Vector2( 25.9261, 0.368473 )

[node name="TextureFrame" type="TextureFrame" parent="Players/Player02"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 45.0
margin/bottom = 58.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Label1" type="Label" parent="Players/Player02"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -400.0
margin/top = -2.0
margin/right = -349.0
margin/bottom = 12.0
text = "Player 2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player03" type="Control" parent="Players"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 538.0
margin/top = 656.0
margin/right = 578.0
margin/bottom = 696.0

[node name="SwitchSwitch" type="Sprite" parent="Players/Player03"]

transform/pos = Vector2( 11.4002, 29.108 )
transform/rot = -45.0
texture = ExtResource( 3 )
offset = Vector2( 25.9261, 0.368473 )

[node name="TextureFrame" type="TextureFrame" parent="Players/Player03"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 45.0
margin/bottom = 58.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Label1" type="Label" parent="Players/Player03"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -401.0
margin/top = 7.0
margin/right = -350.0
margin/bottom = 21.0
text = "Player 3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player04" type="Control" parent="Players"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 536.0
margin/top = 868.0
margin/right = 576.0
margin/bottom = 908.0

[node name="SwitchSwitch" type="Sprite" parent="Players/Player04"]

transform/pos = Vector2( 11.4002, 29.108 )
transform/rot = -45.0
texture = ExtResource( 3 )
offset = Vector2( 25.9261, 0.368473 )

[node name="TextureFrame" type="TextureFrame" parent="Players/Player04"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 45.0
margin/bottom = 58.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Label1" type="Label" parent="Players/Player04"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -399.0
margin/top = 1.0
margin/right = -348.0
margin/bottom = 15.0
text = "Player 4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PlayerListLabel" type="Label" parent="Players"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 150.0
margin/top = 46.0
margin/right = 253.0
margin/bottom = 78.0
custom_fonts/font = ExtResource( 5 )
text = "Players"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Positions" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Team01" type="Control" parent="Positions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Character001" type="Sprite" parent="Positions/Team01"]

transform/pos = Vector2( 1518.12, 329.406 )
texture = ExtResource( 6 )
modulate = Color( 0.345098, 0.898039, 0.231373, 1 )

[node name="Truck001" type="Sprite" parent="Positions/Team01"]

transform/pos = Vector2( 1102.33, 320.317 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )
modulate = Color( 0.346236, 0.898438, 0.231628, 1 )

[node name="Label" type="Label" parent="Positions/Team01"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1200.0
margin/top = 161.0
margin/right = 1265.0
margin/bottom = 175.0
text = "Rad Roach"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TruckSnap" type="Node2D" parent="Positions/Team01"]

transform/pos = Vector2( 1108.77, 490.767 )

[node name="SwingerSnap" type="Node2D" parent="Positions/Team01"]

transform/pos = Vector2( 1509.06, 475.662 )

[node name="Team02" type="Control" parent="Positions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Character2" type="Sprite" parent="Positions/Team02"]

transform/pos = Vector2( 1506.76, 797.134 )
texture = ExtResource( 6 )
modulate = Color( 0.87451, 0.231373, 0.898039, 1 )

[node name="Truck2" type="Sprite" parent="Positions/Team02"]

transform/pos = Vector2( 1090.97, 788.045 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )
modulate = Color( 0.8776, 0.231628, 0.898438, 1 )

[node name="TruckSnap" type="Node2D" parent="Positions/Team02"]

transform/pos = Vector2( 1099.68, 933.82 )

[node name="SwingerSnap" type="Node2D" parent="Positions/Team02"]

transform/pos = Vector2( 1509.06, 933.852 )

[node name="Label1" type="Label" parent="Positions/Team02"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1143.0
margin/top = 634.0
margin/right = 1249.0
margin/bottom = 648.0
text = "Miss Juicy Power"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PositionListLabel" type="Label" parent="Positions"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1122.0
margin/top = 50.0
margin/right = 1248.0
margin/bottom = 82.0
custom_fonts/font = ExtResource( 5 )
text = "Positions"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


